basic mechanics of the game: building, spectator, start player

--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/build/three.js"></script>
     <title>Minecraft Parkour AI</title>
+
+    <style>
+        body {
+            margin:0px;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <p>Minecraft Parkour AI</p>
 
+    <script src="./js/p5.js"></script>
+
+    <script language="javascript" type="text/javascript" src="./js/neat/ConnectionGene.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/ConnectionHistory.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Node.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Player.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Population.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Species.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Genome.js"></script>
+
+    <script src="./js/world.js"></script>
+    <script src="./js/spectator.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
