start genetic alg

--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
 
     <script src="./js/p5.js"></script>
 
-    <script language="javascript" type="text/javascript" src="./js/neat/ConnectionGene.js"></script>
+    <!-- <script language="javascript" type="text/javascript" src="./js/neat/ConnectionGene.js"></script>
     <script language="javascript" type="text/javascript" src="./js/neat/ConnectionHistory.js"></script>
-    <script language="javascript" type="text/javascript" src="./js/neat/Node.js"></script>
-    <script language="javascript" type="text/javascript" src="./js/neat/Player.js"></script>
-    <script language="javascript" type="text/javascript" src="./js/neat/Population.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Node.js"></script> -->
+    <!-- <script language="javascript" type="text/javascript" src="./js/neat/Player.js"></script> -->
+    <!-- <script language="javascript" type="text/javascript" src="./js/neat/Population.js"></script>
     <script language="javascript" type="text/javascript" src="./js/neat/Species.js"></script>
-    <script language="javascript" type="text/javascript" src="./js/neat/Genome.js"></script>
+    <script language="javascript" type="text/javascript" src="./js/neat/Genome.js"></script> -->
 
+
+    <script src="./js/ga/brain.js"></script>
+    <script src="./js/ga/population.js"></script>
+    <script src="./js/player.js"></script>
     <script src="./js/world.js"></script>
     <script src="./js/spectator.js"></script>
     <script src="./js/main.js"></script>
